--- a/parseSql/cgiComplete.ipynb
+++ b/parseSql/cgiComplete.ipynb
@@ -1,127 +1,34 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Example of python cgi programming"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Content-type: text/html\n",
-      "\n",
-      "<html>\n",
-      "<head>\n",
-      "<title>Hello Word - First CGI Program</title>\n",
-      "</head>\n",
-      "<body>\n",
-      "success!\n",
-      "</body>\n",
-      "</html>\n"
-     ]
-    }
-   ],
-   "source": [
-    "#!/usr/bin/env python\n",
-    "\n",
-    "import cgi\n",
-    "import cgitb    #show error on webbrowser when error occurs\n",
-    "cgitb.enable()\n",
-    "\n",
-    "print(\"Content-type: text/html\\n\")    #\\n : unless, Internal Server Error!\n",
-    "\n",
-    "print('<html>')\n",
-    "print('<head>')\n",
-    "print('<title>Hello Word - First CGI Program</title>')\n",
-    "print('</head>')\n",
-    "print('<body>')\n",
-    "\n",
-    "form = cgi.FieldStorage()\n",
-    "\n",
-    "print(\"success!\")\n",
-    "\n",
-    "print('</body>')\n",
-    "print('</html>')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Example of sqlparse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 288,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import sqlparse\n",
-    "import random"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SELECT\n",
-      "select * from foo;\n",
-      "SELECT\n",
-      "select * from bar;\n",
-      "ALTER\n",
-      "ALTER TABLE `guys` ADD FOREIGN KEY (gf_cd) REFERENCES `girls` (`girls_cd`);\n"
-     ]
-    }
-   ],
-   "source": [
-    "sql = 'select * from foo; select * from bar;ALTER TABLE `guys` ADD FOREIGN KEY (gf_cd) REFERENCES `girls` (`girls_cd`);'\n",
-    "for sqls in sqlparse.split(sql):\n",
-    "    print (sqlparse.parse(sqls)[0]).get_type()\n",
-    "    print (sqlparse.parse(sqls)[0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Now get started!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#!/usr/bin/env python\n",
     "import sqlparse\n",
     "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import cgi\n",
+    "import cgitb    #show error on webbrowser when error occurs\n",
+    "cgitb.enable()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -230,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -282,10 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -295,25 +201,12 @@
     "\n",
     "index=1\n",
     "while index != 0:\n",
-    "    #print sql.find('\\n',index)\n",
     "    index=sql.find('\\n',index) +1 #index points the first char of the sentence\n",
     "    \n",
     "    if sql[index:index+2]=='--':\n",
     "        sql=sql[:index]+sql[sql.find('\\n',index)+1:]\n",
     "        index-=2\n",
     "\n",
-    "#print sql"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 333,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
     "sqlPlainStatements=[]\n",
     "sqlCreateStatements=[]\n",
     "sqlAlterStatements=[]\n",
@@ -369,18 +262,8 @@
     "    tables.append(singleTable)\n",
     "    \n",
     "    #print '--'*20\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 334,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
+    "    \n",
+    "    \n",
     "tableUpdate=[]\n",
     "\n",
     "for table in tables: #getting rid of ()\n",
@@ -410,114 +293,9 @@
     "    tableUpdate - {table}\n",
     "    table - [name, {rows}]\n",
     "    Total : tableUpdate[#table][1][#row]\n",
-    "    \"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 335,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<table x=\" 758 \" y=\" 235 \" name=\" indi \"><row name=\" indi_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "\n",
-      "<table x=\" 758 \" y=\" 235 \" name=\" indi \"><row name=\" indi_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" code\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "\n",
-      "<table x=\" 758 \" y=\" 235 \" name=\" indi \"><row name=\" indi_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" code\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" friend\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "\n",
-      "<table x=\" 758 \" y=\" 235 \" name=\" indi \"><row name=\" indi_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" code\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" friend\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" asdf\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "\n",
-      "<table x=\" 242 \" y=\" 511 \" name=\" guys \"><row name=\" guy_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "\n",
-      "<table x=\" 242 \" y=\" 511 \" name=\" guys \"><row name=\" guy_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" guy_name\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "\n",
-      "<table x=\" 242 \" y=\" 511 \" name=\" guys \"><row name=\" guy_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" guy_name\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" gf_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "\n",
-      "<table x=\" 117 \" y=\" 366 \" name=\" girls \"><row name=\" girls_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "\n",
-      "<table x=\" 117 \" y=\" 366 \" name=\" girls \"><row name=\" girls_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" girls_name\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "\n",
-      "<table x=\" 427 \" y=\" 168 \" name=\" city \"><row name=\" city_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<default>NULL</default></row>\n",
-      "\n",
-      "<table x=\" 427 \" y=\" 168 \" name=\" city \"><row name=\" city_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" city_name\" null=\"1\" autoincrement=\"0\">\n",
-      "<default>NULL</default></row>\n",
-      "\n",
-      "<table x=\" 427 \" y=\" 168 \" name=\" city \"><row name=\" city_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" city_name\" null=\"1\" autoincrement=\"0\">\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" country_name\" null=\"1\" autoincrement=\"0\">\n",
-      "<default>NULL</default></row>\n",
-      "\n",
-      "<table x=\" 664 \" y=\" 459 \" name=\" manufacturer \"><row name=\" manufacturer_id\" null=\"1\" autoincrement=\"0\">\n",
-      "<default>NULL</default></row>\n",
-      "\n",
-      "<table x=\" 664 \" y=\" 459 \" name=\" manufacturer \"><row name=\" manufacturer_id\" null=\"1\" autoincrement=\"0\">\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" manufacturer_name\" null=\"1\" autoincrement=\"0\">\n",
-      "<default>NULL</default></row>\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
+    "    \"\"\"\n",
+    "    \n",
+    "    \n",
     "xmlStringTable=\"\" #total for db\n",
     "for table in tableUpdate: #getting rid of ` and split it by space and write XML\n",
     "    rowAtoms=[]\n",
@@ -548,90 +326,19 @@
     "        else :\n",
     "            xmlStringRow=xmlStringRow+\"\"\"<default>NULL</default></row>\"\"\"+'\\n' #needs more task\n",
     "            \n",
-    "        print xmlStringRow\n",
+    "        #print xmlStringRow\n",
     "    \n",
     "            \n",
     "    table[1]=Attributes\n",
     "    xmlStringTable=xmlStringTable+xmlStringRow+'</table>'+'\\n'\n",
     "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 336,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<table x=\" 758 \" y=\" 235 \" name=\" indi \"><row name=\" indi_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" code\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" friend\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" asdf\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "</table>\n",
-      "<table x=\" 242 \" y=\" 511 \" name=\" guys \"><row name=\" guy_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" guy_name\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" gf_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "</table>\n",
-      "<table x=\" 117 \" y=\" 366 \" name=\" girls \"><row name=\" girls_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" girls_name\" null=\"1\" autoincrement=\"0\">\n",
-      "<datatype>INTEGER</datatype>\n",
-      "<default>NULL</default></row>\n",
-      "</table>\n",
-      "<table x=\" 427 \" y=\" 168 \" name=\" city \"><row name=\" city_cd\" null=\"1\" autoincrement=\"0\">\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" city_name\" null=\"1\" autoincrement=\"0\">\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" country_name\" null=\"1\" autoincrement=\"0\">\n",
-      "<default>NULL</default></row>\n",
-      "</table>\n",
-      "<table x=\" 664 \" y=\" 459 \" name=\" manufacturer \"><row name=\" manufacturer_id\" null=\"1\" autoincrement=\"0\">\n",
-      "<default>NULL</default></row>\n",
-      "<row name=\" manufacturer_name\" null=\"1\" autoincrement=\"0\">\n",
-      "<default>NULL</default></row>\n",
-      "</table>\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print xmlStringTable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 337,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "    \n",
     "xmlHeader=xmlHeader+xmlStringTable+'</sql>'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -681,7 +388,7 @@
       "\t</group>\n",
       "</datatypes>\n",
       "\n",
-      "<table x=\" 758 \" y=\" 235 \" name=\" indi \"><row name=\" indi_cd\" null=\"1\" autoincrement=\"0\">\n",
+      "<table x=\" 71 \" y=\" 544 \" name=\" indi \"><row name=\" indi_cd\" null=\"1\" autoincrement=\"0\">\n",
       "<datatype>INTEGER</datatype>\n",
       "<default>NULL</default></row>\n",
       "<row name=\" code\" null=\"1\" autoincrement=\"0\">\n",
@@ -694,7 +401,7 @@
       "<datatype>INTEGER</datatype>\n",
       "<default>NULL</default></row>\n",
       "</table>\n",
-      "<table x=\" 242 \" y=\" 511 \" name=\" guys \"><row name=\" guy_cd\" null=\"1\" autoincrement=\"0\">\n",
+      "<table x=\" 174 \" y=\" 535 \" name=\" guys \"><row name=\" guy_cd\" null=\"1\" autoincrement=\"0\">\n",
       "<datatype>INTEGER</datatype>\n",
       "<default>NULL</default></row>\n",
       "<row name=\" guy_name\" null=\"1\" autoincrement=\"0\">\n",
@@ -704,21 +411,21 @@
       "<datatype>INTEGER</datatype>\n",
       "<default>NULL</default></row>\n",
       "</table>\n",
-      "<table x=\" 117 \" y=\" 366 \" name=\" girls \"><row name=\" girls_cd\" null=\"1\" autoincrement=\"0\">\n",
+      "<table x=\" 571 \" y=\" 277 \" name=\" girls \"><row name=\" girls_cd\" null=\"1\" autoincrement=\"0\">\n",
       "<datatype>INTEGER</datatype>\n",
       "<default>NULL</default></row>\n",
       "<row name=\" girls_name\" null=\"1\" autoincrement=\"0\">\n",
       "<datatype>INTEGER</datatype>\n",
       "<default>NULL</default></row>\n",
       "</table>\n",
-      "<table x=\" 427 \" y=\" 168 \" name=\" city \"><row name=\" city_cd\" null=\"1\" autoincrement=\"0\">\n",
+      "<table x=\" 532 \" y=\" 511 \" name=\" city \"><row name=\" city_cd\" null=\"1\" autoincrement=\"0\">\n",
       "<default>NULL</default></row>\n",
       "<row name=\" city_name\" null=\"1\" autoincrement=\"0\">\n",
       "<default>NULL</default></row>\n",
       "<row name=\" country_name\" null=\"1\" autoincrement=\"0\">\n",
       "<default>NULL</default></row>\n",
       "</table>\n",
-      "<table x=\" 664 \" y=\" 459 \" name=\" manufacturer \"><row name=\" manufacturer_id\" null=\"1\" autoincrement=\"0\">\n",
+      "<table x=\" 520 \" y=\" 288 \" name=\" manufacturer \"><row name=\" manufacturer_id\" null=\"1\" autoincrement=\"0\">\n",
       "<default>NULL</default></row>\n",
       "<row name=\" manufacturer_name\" null=\"1\" autoincrement=\"0\">\n",
       "<default>NULL</default></row>\n",
@@ -730,6 +437,15 @@
    "source": [
     "print xmlHeader"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
