--- a/locale/en.xml
+++ b/locale/en.xml
@@ -97,6 +97,7 @@
 	<string name="http500">Internal Server Error</string>
 	<string name="http501">Not Implemented</string>
 	<string name="http503">Service Unavailable</string>
+	<string name="clientxmlfromsql">Generate XML From SQL</string>
 	
 	<!-- misc -->
 	<string name="xmlerror">XML error</string>
